css/index.css
@import 'https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600|Lato:300,400';

.navbar {
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 600;
    font-size: 15px;
}
.page1 {
    background-image: url("../img/back1.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}
.page2 {
    background-color: #F0F0F0;
}
.page3 {
    background-image: url("../img/back3.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}
.page4 {
    background-image: url("../img/back4.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}
.page5 {
    background-image: url("../img/back5.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}
.first-name {
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 300;
    font-size: 80px;
}
.last-name {
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 100;
    font-size: 80px;
}
.name {
    text-align: center;
    color: white;
}
.raw-text {
    text-align: center;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    font-size: 30px;
}
.intro-text {
    text-align: center;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 300;
    color: #ffffff;
    font-size: 20px;
}
.dp {
    width: 170px;
}
.headings {
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 400;
    font-size: 80px;
    text-align: center;
    text-shadow: 5px 5px 5px #FFFFFF;
}
.proj-img {
    height: 150px;
    width: 150px;
    /*margin-left: 150px;*/
}
.proj-text {
    text-align: center;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    font-size: 13px;
}
.panel {
    border-style: solid;
    border-width: 2px;
    border-color: black;
}
.proj-panel {
    width: 70%;
    padding-bottom: 40px;
    /*margin-left: 70px;*/
}
.proj-panel-heading {
    background-color: #f5f5f5;
    vertical-align: center;
    padding-top: 7px;
    padding-bottom: 7px;
    font-size: 15px;
}
.intern-panel-body {
    padding-top: 20px;
    padding-left: 10px;
    padding-bottom: 20px;
    padding-right: 10px;
}
.intern-panel-image {
    padding-top: 20px;
}
.intern-box {
    box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
    -moz-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
    -webkit-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
    /*text-overflow: all;*/
    margin-top: 20px;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    /*min-height: 150px;*/
    width: 95%;
    background-color: rgba(255, 255, 255, 0.7);
}
.intern-post, .intern-time {
    background-color: rgba(0, 0, 0, 0.2);
}
.intern-box a {
    color: #736AFF;
}
.intern-img {
    margin-top: 10px;
    height: 150px;
    width: 150px;
}
.intern-panel {
    width: 80%;
    text-align: center;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    opacity: 0.9;
}
.box {
    background-color: black;
    color: white;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 110%;
    padding: 15px 15px 15px 15px;
    background-color: rgba(0, 0, 0, 0.7);
    text-decoration: none !important;
}
.box:hover {
    color: white;
    cursor: default;
    background-color: rgba(0, 0, 0, 1);
}
h3 {
    font-family: 'Lato', sans-serif !important;
    font-weight: 300 !important;
    color: red !important;
}
.not-work-box {
    box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
    -moz-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
    -webkit-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
    background-color: rgba(255, 255, 255, 0.7);
    padding: 5px 5px 10px 5px;
}
.not-work-text {
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 14px;
    padding-left: 10px;
}
.foot-text {
    background-color: rgba(0, 0, 0, 0.4);
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 18px;
    position: relative;
    bottom: 10px;
    color: white;
    padding: 10px 10px 10px 10px;
}
.box-padd {
    padding-top: 30px;
    padding-bottom: 30px;
}
body {
    overflow-x: hidden;
}

@media only screen and (min-width: 750px) {
    .intern-panel-body {
        padding-top: 10px;
        padding-left: 0px;
        padding-bottom: 10px;
    }
    .intern-panel-image {
        padding-left: 5px;
        padding-top: 5px;
        padding-bottom: 5px;
    }
    .intern-post {
        border-right-style: solid;
        border-right-width: 1px;
        border-color: white;
        margin-bottom: 5px;
    }
    .intern-time {
        border-left-style: solid;
        border-left-width: 1px;
        border-color: white;
        margin-bottom: 5px;
    }
}

